--- a/Paddlist.csproj
+++ b/Paddlist.csproj
@@ -20,4 +20,10 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Audio\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
 </Project>
